style: fix vertical alignment of post metadata elements

--- a/themes/myblog/static/css/style.css
+++ b/themes/myblog/static/css/style.css
@@ -1080,6 +1080,10 @@ main {
   margin-bottom: 24px;
 }
 
+.post .meta .date {
+  margin-bottom: 0;
+}
+
 .read-count {
   display: flex;
   align-items: center;
